2007-03-26  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Fix the bug-report address in AC_INIT (#363283).
	Patch from Gilles Dartiguelongue.

2007-03-26  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-summary.c:
	Fix a #include typo (#414216).  Patch from Loïc Minier.

2007-03-12  Harish Krishnaswamy <kharish@novell.com>

	* configure.in: Evolution-Exchange 2.10.0 release updates.

2007-03-06  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes #384303 - Patch by Srinivasa Ragavan
	* configure.in:
	* addressbook/e-book-backend-gal.c: Disable GAL caching if
	LDAP_CONTROL_PAGEDRESULTS is undefined.
	
2007-03-06  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder_info): Mask
	CAMEL_FOLDER_INFO_FAST with CAMEL_FOLDER_INFO_SUBSCRIBED in order
	to fetch the correct folder list, which changed after the public
	folder optimization fix.
	
2007-02-28  Kjartan Maraas  <kmaraas@gnome.org>

	* addressbook/e-book-backend-gal.c: (parse_page_control):
	Don't mark debug messages for translation. The strings are
	hard enough to understand for the developers it seems.

2007-02-26  Srinivasa Ragavan <sragavan@novell.com>

	* NEWS, configure.in: Evolution-Exchange 2.9.92 release updates.

2007-02-26  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes BGO #393029 - Patch by Nathan Owens <pianocomp81@yahoo.com>

	calendar/e-cal-backend-exchange.c 
	(e_cal_backend_exchange_compute_changes_foreach_key): Check for
	non-NULL instead of NULL.
	
2007-02-26 Harish Krishnaswamy <kharish@novell.com>

	* configure.in : Update intltool version.

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS.

2007-02-19  Veerapuram Varadhan  <vvaradhan@novell.com>

	* Fixes BGO #400735

	configure.in:
	addressbook/Makefile.am:
	addressbook/e-book-backend-gal.c:
	addressbook/e-book-backend-db-cache.c:
	addressbook/e-book-backend-db-cache.h: Reverted the changes