@@ -2716,12 +2716,12 @@ subscribe_folder (MailStub *stub, const char *folder_name)
 static void
 unsubscribe_folder (MailStub *stub, const char *folder_name)
 {
-	d(printf ("unsubscribe folder : %s\n", folder_name));
 	MailStubExchange *mse = MAIL_STUB_EXCHANGE (stub);
 	ExchangeAccountFolderResult result;
 	EFolder *folder;
 	char *path, *pub_name;
 
+	d(printf ("unsubscribe folder : %s\n", folder_name));
 	path = g_build_filename ("/", folder_name, NULL);
 	folder = exchange_account_get_folder (mse->account, path);
 	if (!folder) {
