@@ -1,3 +1,14 @@
+2007-03-27  Matthew Barnes  <mbarnes@redhat.com>
+
+	* addressbook/e-book-backend-gal.c:
+	* calendar/e-cal-backend-exchange-calendar.c:
+	* calendar/e-cal-backend-exchange.c:
+	* camel/camel-exchange-store.c:
+	* mail/mail-stub-exchange:
+	* storage/exchange-component.c:
+	* storage/exchange-config-listener.c:
+	Don't mix declarations and code (#405495).
+
 2007-03-26  Matthew Barnes  <mbarnes@redhat.com>
 
 	* configure.in: Fix the bug-report address in AC_INIT (#363283).
